Basic spacing rule, and fixed missing 'leave' choice nodes in tree

--- a/src/codex/components/ResultsPanels/EventResultsPanel/EventTree/index.module.scss
+++ b/src/codex/components/ResultsPanels/EventResultsPanel/EventTree/index.module.scss
@@ -123,7 +123,7 @@
     font-size: font-size('xxs');
   }
 
-  &--combat-fallback {
+  &--no-text-fallback {
     font-size: font-size('xs');
     font-weight: bold;
     font-style: italic;
